app/assets/stylesheets/restaurants.css.scss
// Place all the styles related to the Restaurants controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.left {
	float: left;
	margin-right: 20px;
}

.restaurant-grid {
	margin: 20px auto;
	max-width: 1073px;
}

.restaurant-tile {

	max-width: 250px;

	margin-top: 10px;
	margin-bottom: 10px;

	box-shadow: 0px 0px 3px rgba(0,0,0, .5);
	border-radius: 2px;

	position: relative;
	overflow: hidden;
}



.restaurant-title-container {
	background: rgba(0,0,0, .55);
	padding: 10px;

	width: 100%;

	position: absolute;
	bottom: 0;
	z-index: 10;

	bottom: -26px;

	-webkit-transition: bottom .1s;
	-moz-transition: bottom .1s;
	-ms-transition: bottom .1s;
	-o-transition: bottom .1s;
	transition: bottom .1s;

	.rating {
		color: rgba(255,255,255,.8);
		margin: 0;
		padding: 0;
	}
}

.restaurant-tile:hover .restaurant-title-container,
.restaurant-tile:focus .restaurant-title-container {
	bottom: 0;
}

.restaurant-title {
	margin: 0;
	font-size: 18px;
	line-height: 20px;
	
	color: #f0f0f0;

}

.header-img {
	margin: 0 -16px;
	-webkit-box-shadow: 0 0 2px rgb(0,0,0);
	-moz-box-shadow: 0 0 2px rgb(0,0,0);
	box-shadow: 0 0 2px rgb(0,0,0);

	img {
		position: relative;
		top: -50%;
		z-index: -10;
	}
}

.content {
	background: #fff;
	padding: 20px;
}

.content.with-header-img {
	-webkit-box-shadow: 0 0 2px rgba(0,0,0, .5);
	-moz-box-shadow: 0 0 2px rgba(0,0,0, .5);
	box-shadow: 0 0 2px rgba(0,0,0, .5);
	border-radius: 3px;

	margin: -100px 0 50px;
}

.yelp-review-list {
	list-style-image: url('yelp-icon.png');

	li {
		margin-top: 3px;
	}
}

.happy-review-list {
	list-style-image: url('happy-review-icon.jpg');

	li {
		margin-top: 5px;
	}
}

